--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "实现一个简单的react 参考：[build your own react](https://pomb.us/build-your-own-react/)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src --out-dir lib"
   },
   "repository": {
     "type": "git",
