--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/preset-react": "^7.16.7",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
+    "eslint": "^8.10.0",
+    "eslint-plugin-react": "^7.29.3",
     "husky": "^7.0.4"
   }
 }
